# ngdemoweb

./: Angular.hs  AngularDemo.hs  Foundation.hs  NgDemoweb.cabal  README  cabal.config  devel.hs
AngularModules/PersonClient/AddPerson/: controller.julius  template.hamlet
AngularModules/PersonClient/AllPersons/: controller.julius  template.hamlet
AngularModules/PersonClient/SinglePerson/: controller.julius  template.hamlet
AngularModules/PersonService/: component.julius
Yesod/Angular/: Dependencies.hs  Util.hs
config/: keter.yaml  routes
deploy/: Procfile
